# promptfw

./: .gitignore  CHANGELOG.md  Makefile  README.md  catalog-info.yaml  pyproject.toml
.github/workflows/: publish.yml
.windsurf/workflows/: governance-check.md  release.md  repo-health-check.md
docs/adr/: ADR-001-four-layer-prompt-stack.md  ADR-002-yaml-registry-vs-db-registry.md  ADR-003-extension-roadmap.md
src/promptfw/: __init__.py  django_registry.py  exceptions.py  lektorat.py  parsing.py  planning.py  registry.py  renderer.py  schema.py  stack.py  writing.py
tests/: test_django_registry.py  test_extract_field.py  test_for_format.py  test_issues.py  test_lektorat.py  test_parsing.py  test_planning.py  test_registry.py  test_renderer.py  test_review_fixes.py  test_schema.py  test_writing.py
