[project]
name = "promptfw"
version = "0.2.0"
description = "Prompt Template Framework — 4-layer Jinja2 template engine for LLM applications"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Achim Dehnert", email = "achim@dehnert.com"}
]
keywords = ["llm", "prompt", "template", "jinja2", "ai", "openai", "anthropic", "prompt-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "jinja2>=3.1",
    "pydantic>=2.6",
]

[project.optional-dependencies]
tiktoken = [
    "tiktoken>=0.6",
]
hotreload = [
    "watchdog>=4.0",
]
all = [
    "tiktoken>=0.6",
    "watchdog>=4.0",
    "pyyaml>=6.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "tiktoken>=0.6",
]
testing = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

[project.urls]
Homepage = "https://github.com/achimdehnert/platform"
Repository = "https://github.com/achimdehnert/platform/tree/main/packages/promptfw"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/promptfw"]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
